--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
             </div>
         </div>
     </div>
+
+
+    <div class="gray-content">
+        <div class="gray-text">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class="quoter">
+            -Thor, God of Thunder
+        </div>
+    </div>
     
     
 
