Add blue content

--- a/index.html
+++ b/index.html
@@ -105,6 +105,19 @@
             -Thor, God of Thunder
         </div>
     </div>
+
+    <div class="blue-content">
+        <div class="action">
+            <div class="action-left">
+                <div class="action-text">Call to action! It's time!</div>
+                <div class="hero-subtext">Sign up for our product by clicking that button right over! there</div>
+            </div>
+
+            <button class="action-button">
+                Sign Up
+            </button>
+        </div>
+    </div>
     
     
 
