--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
         </div>
     </div>
     
+    <div class="footer">
+        Copyright © The Odin Project 2021
+    </div>
     
 
 </body>
